--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,67 @@
 .body-page {
   font-family: "Roboto", sans-serif;
   line-height: 1.5;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-.body-page a {
+body-page a {
   text-decoration: none;
 }
 
+
+* {
+  box-sizing: border-box;
+}
+
+img {
+  display: block;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  margin: 0 auto;
+  width: 1158px;
+}
+
+
+
 /* Header Alanı */
+.page-start .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #e7e9fc;
+}
+
+
 .header-logo {
   font-family: "Raleway", sans-serif;
+  font-weight: 700;
   font-size: 18px;
   font-weight: 700;
   line-height: 1.16;
@@ -22,12 +74,21 @@
   color: #2e2f42;
 }
 
+.head-menu {
+  display: flex;
+  gap: 40px;
+  padding-right: 300px;
+}
+
 .head-menu-list {
+  display: flex;
+  gap: 24px;
   text-decoration: none;
   list-style-type: none;
 }
 
 .head-menu-list>a {
+  font-weight: 500;
   font-size: 16px;
   font-weight: 500;
   letter-spacing: 0.02em;
@@ -42,11 +103,14 @@
 .head-menu-list>a:active {
   color: #404bbf;
   text-decoration: underline;
-  text-underline-offset: 5px;
 }
 
 .head-contact {
   font-style: normal;
+  display: flex;
+  justify-content: flex-end;
+  gap: 40px;
+  
   text-decoration: none;
   list-style-type: none;
 }
@@ -73,6 +137,7 @@
 .title-area { /* h1 etiketi */
     background-color: #2E2F42;
     text-align: center;
+    padding: 188px 0;
 }
 
 .title-text {
@@ -92,6 +157,11 @@
     color: #FFFFFF;
     background-color: #4D5AE5;
     cursor: pointer;
+    padding: 16px 32px;
+    box-shadow: 0 4px rgba(0, 0, 0, 0.15);
+    margin-top: 48px;
+    border-radius: 4px;
+    border: none;
 }
 
 .title-button:hover {
@@ -101,12 +171,16 @@
 
 /* 2.Section */
 
-.first-paragraph {
-    text-align: center;
+.first-paragraph .container {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .first-paragraph-list {
     list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 24px;
 }
 
 .first-paragraph-text {
@@ -115,6 +189,7 @@
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    padding-top: 8px;
 }
 
 .first-h3 { /* h3 etiketleri */
@@ -130,12 +205,21 @@
 
 .team-area {
     background-color: #F4F4FD;
+ }
+
+ .team-area .title {
     color: #2E2F42;
     font-size: 36px;
     font-weight: 700;
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
+    margin-bottom: 72px;
+}
+
+.team-area .container {
+  padding: 120px 0;
+  margin: 0 auto;
 }
 
 .team-area h2 { /* h2 etiket Our Team*/
@@ -149,6 +233,10 @@
 
 .team-area-list {
     list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+    line-height: 1.5;
 }
 
 .team-list-name { /* h3 etiketleri */
@@ -158,6 +246,7 @@
     letter-spacing: 0.02em;
     text-align: center;
     color: #2E2F42;
+    padding-top: 32px;
 }
 
 .team-list-job {
@@ -167,22 +256,33 @@
     letter-spacing: 0.02em;
     text-align: center;
     color: #434455;
+    padding-top: 8px;
 }
 
 .team-list {
     background-color: #FFFFFF;
-}
+    border-radius: 0 0 4px  4px;
+    padding: 0px 0px 32px 0px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    }
+    
 /* 3. Section Our Team Liste Bitti */
 
 /* 4. Section Our Portfolio */
 
-.portfolio-area {
+.portfolio-area .container {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.portfolio-area .title {
     font-size: 36px;
     font-weight: 700;
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2E2F42;
+    margin-bottom: 72px;
 }
 
 .portfolio-area h2 { /* h2 etiketi Our Portfolio */
@@ -196,7 +296,12 @@
 
 .portfolio-area-list {
     list-style-type: none;
-}
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex: 1 1 calc(33.333% - 10px);
+    gap: 24px;
+  }
 
 .portfolio-list-name { /* h3 etiketleri */
     font-size: 20px;
@@ -204,6 +309,11 @@
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2E2F42;
+    padding-top: 32px;
+    padding-left: 16px;
+    text-align: left;
+    border-right: 1px solid #e7e9fc;
+    border-left: 1px solid  #e7e9fc;
 }
 
 .portfolio-list-job {
@@ -212,13 +322,29 @@
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    padding-top: 8px;
+    padding-bottom: 32px;
+    padding-left: 16px;
+    text-align: left;
+    border-right: 1px solid  #e7e9fc;
+    border-left: 1px solid  #e7e9fc;
 }
+
+.portfolio-list {
+  background-color: #fff;
+  border-bottom: 1px solid  #e7e9fc;
+}
+
+
 /* 4. Section Our Portfolio bitti */
 
 /* 5. Footer */
 
 .finish-page {
-    background-color: #2E2F42;
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-color: #2E2F42;
+  display: flex;
 }
 
 .footer-logo {
@@ -241,4 +367,5 @@
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #F4F4FD;
+    padding-top: 16px;
 }
